test/files/invalid/bad_union_types.fbs
union A0 {
  A: A0,
  B: A1,
  C: [bool],
  D: [bool: 1],
  E: bool,
  F: uint8,
  G: float32,
  H: [A0],
  I: [AI],
  A0,
  A1,
  [bool],
  [bool: 1],
  bool,
  uint8,
  float32,
  string,
  [A0],
  [A1],
}

enum A1: uint8 {}
