test/files/invalid/bad_union_types.stderr
[0m[1m[38;5;9merror[0m[1m: Unsupported type[0m
  [0m[34m┌─[0m test/files/invalid/bad_union_types.fbs:2:6
  [0m[34m│[0m
[0m[34m2[0m [0m[34m│[0m   A: [0m[31mA0[0m,
  [0m[34m│[0m      [0m[31m^^[0m [0m[31mUnions in unions are not supported[0m

[0m[1m[38;5;9merror[0m[1m: Unsupported type[0m
  [0m[34m┌─[0m test/files/invalid/bad_union_types.fbs:3:6
  [0m[34m│[0m
[0m[34m3[0m [0m[34m│[0m   B: [0m[31mA1[0m,
  [0m[34m│[0m      [0m[31m^^[0m [0m[31mStructs in unions are not supported[0m

[0m[1m[38;5;9merror[0m[1m: Unsupported type[0m
  [0m[34m┌─[0m test/files/invalid/bad_union_types.fbs:4:6
  [0m[34m│[0m
[0m[34m4[0m [0m[34m│[0m   C: [0m[31mA2[0m,
  [0m[34m│[0m      [0m[31m^^[0m [0m[31mEnums in unions are not supported[0m

[0m[1m[38;5;9merror[0m[1m: Unsupported type[0m
  [0m[34m┌─[0m test/files/invalid/bad_union_types.fbs:5:6
  [0m[34m│[0m
[0m[34m5[0m [0m[34m│[0m   D: [0m[31m[bool][0m,
  [0m[34m│[0m      [0m[31m^^^^^^[0m [0m[31mVectors in unions are not supported[0m

[0m[1m[38;5;9merror[0m[1m: Unsupported type[0m
  [0m[34m┌─[0m test/files/invalid/bad_union_types.fbs:6:6
  [0m[34m│[0m
[0m[34m6[0m [0m[34m│[0m   E: [0m[31m[bool: 1][0m,
  [0m[34m│[0m      [0m[31m^^^^^^^^^[0m [0m[31mArrays in unions are not supported[0m

[0m[1m[38;5;9merror[0m[1m: Unsupported type[0m
  [0m[34m┌─[0m test/files/invalid/bad_union_types.fbs:7:6
  [0m[34m│[0m
[0m[34m7[0m [0m[34m│[0m   F: [0m[31mbool[0m,
  [0m[34m│[0m      [0m[31m^^^^[0m [0m[31mBools in unions are not supported[0m

[0m[1m[38;5;9merror[0m[1m: Unsupported type[0m
  [0m[34m┌─[0m test/files/invalid/bad_union_types.fbs:8:6
  [0m[34m│[0m
[0m[34m8[0m [0m[34m│[0m   G: [0m[31muint8[0m,
  [0m[34m│[0m      [0m[31m^^^^^[0m [0m[31mIntegers in unions are not supported[0m

[0m[1m[38;5;9merror[0m[1m: Unsupported type[0m
  [0m[34m┌─[0m test/files/invalid/bad_union_types.fbs:9:6
  [0m[34m│[0m
[0m[34m9[0m [0m[34m│[0m   H: [0m[31mfloat32[0m,
  [0m[34m│[0m      [0m[31m^^^^^^^[0m [0m[31mFloats in unions are not supported[0m

[0m[1m[38;5;9merror[0m[1m: Unsupported type[0m
   [0m[34m┌─[0m test/files/invalid/bad_union_types.fbs:10:6
   [0m[34m│[0m
[0m[34m10[0m [0m[34m│[0m   I: [0m[31mstring[0m,
   [0m[34m│[0m      [0m[31m^^^^^^[0m [0m[31mStrings in unions are not supported[0m

Error: Bailing because of errors
